# BomManager

./: CMakeLists.txt  README.md  main.c
core/: BOMFormula.c  BOMMenu.c  BOMPart.c  BOMPartCount.c  BOMUtils.c  formula.h  menu.h  part.h  utils.c
data/: Formula.csv  Part.csv  formula.csv  formula_details.csv  part.csv
include/: BOMFormula.h  BOMMenu.h  BOMPart.h  BOMPartCount.h  BOMUtils.h
lib/: file.c  file.h  formula.c  formula.h  menu.c  menu.h  part.c  part.h  partCount.c  partCount.h  plan.c  plan.h  types.h  utils.c  utils.h
